# 4k-softsynth

./: .gitignore  4k-softsynth.sln  AudioEditor.cc  EditBase.hh  GUI_MIGRATION_SUMMARY.md  GUI_PARAMETER_INTEGRATION_COMPLETE.md  GUI_PARAMETER_ISSUE_RESOLUTION.md  INSTRUMENT_CONTROLS_ENHANCEMENT.md  Makefile  POINTER_BASED_PARAMETERS_COMPLETE.md  Test.cc  common.inc  common.mk  main.asm  pack.sh  softsynth.h  softsynth_x87.asm
editor/: .pylintrc  .vscode_launch_summary.md  AudioEditor.cc  AudioEditor.hh  CPP_DEBUGGING.md  DEBUGGING.md  Display.hh  EditBase.cc  EditBase.hh  InstrumentEdit.cc  InstrumentEdit.hh  Makefile  PatternEdit.cc  PatternEdit.hh  README.md  README_OLD.md  Test.cc  TrackEdit.cc  TrackEdit.hh  __init__.py  __main__.py  aed_main.cc  build.sh  cli_main.py  debug_cpp.py  debug_lldb.txt  editor.vcxproj  editor.vcxproj.filters  launch.py  main.py  pyproject.toml  rebuild.sh  requirements.txt  setup.py  test_comprehensive_integration.py  test_final_integration.py  test_gui_integration.py  test_parameter_names.py  tkinter_main.py
editor/.github/: AGENTS.md
editor/audio/: __init__.py  synth_wrapper.py
editor/cpp/: __init__.py  synth_bindings.cpp
editor/docs/: DEBUGGING.md
editor/gui/: __init__.py  instrument_editor.py  main_window.py  plot_window.py
editor/src/editor/: __init__.py  __main__.py
editor/src/editor/audio/: __init__.py  (+2 more)
editor/tests/: __init__.py  test_comprehensive_integration.py  test_final_integration.py  test_gui_integration.py  test_parameter_names.py  test_synth_wrapper.py
editor/utils/: __init__.py  logger.py
(+66 files in other folders)
