[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "4k-softsynth-editor"
version = "1.0.0"
description = "A Python-based GUI editor for the 4K Softsynth ARM64 synthesizer"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "4K Softsynth Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyaudio>=0.2.11",
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pylint",
]

[project.scripts]
synth-editor = "editor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]